<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/aez"
        android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/recycl"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyid"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:scrollbarSize="0dp"
            android:scrollbars="none"
            android:verticalScrollbarPosition="defaultPosition">

            <LinearLayout
                android:id="@+id/twelvehours"
                android:layout_width="370dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/card4"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/cardsbackground"
                    android:fontFamily="@font/heebo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hours12Title"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/heebo_bold"
                        android:padding="1px"
                        android:text="@string/hours12"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/food12"
                        />

                </TableRow>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/sixteenhours"
                android:layout_width="370dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/card4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/cardsbackground"
                    android:fontFamily="@font/heebo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hours16Title"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/heebo_bold"
                        android:padding="1px"
                        android:text="@string/hours16"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/goodfood" />

                </TableRow>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/twentyhours"
                android:layout_width="370dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/card4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/cardsbackground"
                    android:fontFamily="@font/heebo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hours20title"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/heebo_bold"
                        android:padding="1px"
                        android:text="@string/hours20"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/frui" />

                </TableRow>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/twentyfourhours"
                android:layout_width="370dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/card4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/cardsbackground"
                    android:fontFamily="@font/heebo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hours24title"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/heebo_bold"
                        android:padding="1px"
                        android:text="@string/hours24"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/imageView0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/gla" />

                </TableRow>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/selecthours"
                android:layout_width="370dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/card4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/cardsbackground"
                    android:fontFamily="@font/heebo_bold"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/custonFast"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/heebo_bold"
                        android:padding="1px"
                        android:text="@string/create_custom_fast"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/cof" />
                </TableRow>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TableRow
        android:layout_width="400dp"
        android:layout_height="180dp"
        android:layout_marginTop="50px"
        android:background="@drawable/card4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="15px"
        android:layout_marginRight="10px">

        <TextView
            android:id="@+id/DateView"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/heebo_bold"
            android:text="What fasting category would you like to try ?\n\n  Select the suitable category for you and read more info about it."
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:background="@drawable/food1" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>